[build-system]
requires = ["setuptools", "setuptools-git-versioning<2", "dockerfile-parse==2.0.1", "validators==0.22.0", "termcolor==2.4.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chmocker"
dynamic = ["version"]
authors = [{ name = "Flipper Devices Inc.", email = "pypi@flipperdevices.com" }]
description = "Chmocker (chroot + docker) is yet another try to create MacOS containers."
readme = "README.md"
requires-python = ">=3.11"
keywords = ["chmocker", "flipperzero"]
license = { text = "GPL-3.0" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Topic :: Software Development :: Build Tools",
    "Development Status :: 4 - Beta",
    "Operating System :: MacOS",
]

[project.urls]
homepage = "https://github.com/flipperdevices/chmocker"
documentation = "https://github.com/flipperdevices/chmocker"
repository = "https://github.com/flipperdevices/chmocker"
issues = "https://github.com/flipperdevices/chmocker/issues"

[project.scripts]
chmocker = "chmocker:main"

# https://setuptools-git-versioning.readthedocs.io/en/stable/schemas/file/dev_release_file.html#development-releases-prereleases-from-dev-branch
[tool.setuptools-git-versioning]
enabled = false
version_file = "VERSION.txt"
count_commits_from_version_file = true
dev_template = "{tag}.dev{ccount}"
dirty_template = "{tag}.dev{ccount}"